Minor style fix in dark mode

--- a/src/components/WorkHistory.css
+++ b/src/components/WorkHistory.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     margin: 0.75rem auto;
     margin-bottom: 0px;
-    max-width: 600px;
+    max-width: 635px;
 }
 
 .company-logo {
